[tool.poetry]
name = "nonebot-plugin-bind"
version = "0.1.5"
description = "nonebot多平台账户信息绑定"
authors = ["canxin <1969730106@qq.com>"]
readme = "README.md"
packages = [{ include = "nonebot_plugin_bind" }]
homepage = 'https://github.com/canxin121/nonebot_plugin_bind'

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.1"
nonebot-plugin-datastore = "^1.1.0"
nonebot-plugin-apscheduler = "^0.3.0"
nonebot-plugin-alconna = "^0.13.0"

[tool.nonebot]
plugins = ["nonebot_plugin_bind"]
adapters = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
